--- a/stylesheets/games.css
+++ b/stylesheets/games.css
@@ -4,13 +4,14 @@
 @import "{{ site.theme }}";
 
 html { font-size: 22px; }
-body { padding: 1rem; }
+body { padding: 1rem;
+        background-color: #000000; }
 
 .card {
-  background-color: dodgerblue;
-  color: white;
+  background-color: grey;
+  color: black;
   padding: 1rem;
-  height: 4rem;
+  height: 17rem;
 }
 
 .cards {
