--- a/stylesheets/games.css
+++ b/stylesheets/games.css
@@ -21,6 +21,10 @@ body { padding: 1rem;
   gap: 1rem;
 }
 
+@media (min-width: 1200px) {
+  .cards { grid-template-columns: repeat(2, 1fr); }
+}
+
 @media (min-width: 600px) {
   .cards { grid-template-columns: repeat(2, 1fr); }
 }
