--- a/assets/css/main-2.css
+++ b/assets/css/main-2.css
@@ -844,7 +844,12 @@ button,
   color: rgba(255, 255, 255, 0.5);
   left: 4em;
   opacity: 0.5;
-  position: absolute; }
+  position: absolute;
+  display: flex;
+  right: 0;
+  bottom: 0;
+  left:0;
+   }
   #footer .icons {
     margin: 0 0 0.5em 0; }
   #footer .copyright {
