--- a/assets/css/main-2.css
+++ b/assets/css/main-2.css
@@ -845,11 +845,7 @@ button,
   left: 4em;
   opacity: 0.5;
   position: absolute;
-  display: flex;
-  right: 0;
-  bottom: 0;
-  left:0;
-   }
+  top: 100%; }
   #footer .icons {
     margin: 0 0 0.5em 0; }
   #footer .copyright {
