--- a/assets/css/main-2.css
+++ b/assets/css/main-2.css
@@ -844,8 +844,8 @@ button,
   color: rgba(255, 255, 255, 0.5);
   left: 4em;
   opacity: 0.5;
-  position: absolute;
-  top: 100%; }
+  display: flex;
+  flex-shrink: 0; }
   #footer .icons {
     margin: 0 0 0.5em 0; }
   #footer .copyright {
