--- a/assets/css/main-2.css
+++ b/assets/css/main-2.css
@@ -847,17 +847,17 @@ button,
   display: flex;
   flex-shrink: 0; }
   #footer .icons {
-    margin: 0 0 0.5em 0; }
+    margin: 0 1em 0.5em 0; }
   #footer .copyright {
     font-size: 0.8em;
     list-style: none;
-    padding: 0; }
+    padding: 3px; }
     #footer .copyright li {
       border-left: solid 1px rgba(255, 255, 255, 0.25);
       display: inline-block;
       line-height: 1em;
-      margin: 0 0 0 0.75em;
-      padding: 0 0 0 0.75em; }
+      margin: 0 0 0 .75em;
+      padding: 0 0 0 .75em; }
       #footer .copyright li:first-child {
         border-left: 0;
         margin-left: 0;
