--- a/assets/css/main-2.css
+++ b/assets/css/main-2.css
@@ -844,8 +844,7 @@ button,
   color: rgba(255, 255, 255, 0.5);
   left: 4em;
   opacity: 0.5;
-  display: flex;
-  flex-shrink: 0; }
+  display: flex; }
   #footer .icons {
     margin: 0 1em 0.5em 0; }
   #footer .copyright {
