--- a/assets/css/main-2.css
+++ b/assets/css/main-2.css
@@ -846,7 +846,7 @@ button,
   opacity: 0.5;
   display: flex; }
   #footer .icons {
-    margin: 0 1em 0.5em 0; }
+    margin: 0 0 0.5em 0; }
   #footer .copyright {
     font-size: 0.8em;
     list-style: none;
